# Wattch

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-packages.yml
crates/rapl-wattchd/: Cargo.toml
crates/rapl-wattchd/src/: daemon.rs  main.rs  sampler.rs  socket.rs
crates/rapl-wattchd/tests/: daemon_integration.rs
crates/wattch-cli/: Cargo.toml
crates/wattch-cli/src/: client.rs  duration.rs  main.rs
crates/wattch-cli/src/commands/: hello.rs  mod.rs  run.rs  sources.rs  stream.rs
crates/wattch-cli/src/output/: csv.rs  format.rs  jsonl.rs  line.rs  mod.rs  summary.rs  table.rs
crates/wattch-cli/tests/: cli_smoke.rs
crates/wattch-core/: Cargo.toml
crates/wattch-core/src/: config.rs  duration.rs  errors.rs  framing.rs  lib.rs  summary.rs  time.rs
crates/wattch-core/src/sources/: mod.rs  powercap.rs
crates/wattch-proto/: Cargo.toml  build.rs
crates/wattch-proto/src/: lib.rs
proto/: wattch.proto
