[package]
name = "wattch-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "wattch"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
wattch-core = { path = "../wattch-core" }
wattch-proto = { path = "../wattch-proto" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
tokio.workspace = true
